fix: fix broken z-index

--- a/packages/components/bolt-page-header/src/page-header.scss
+++ b/packages/components/bolt-page-header/src/page-header.scss
@@ -909,7 +909,7 @@
 
 .c-hamburger__button--open {
   opacity: 1;
-  z-index: z('content') + 5;
+  z-index: bolt-z-index('content') + 5;
 }
 
 .c-hamburger__button--close {
