--- a/packages/components/bolt-sticky/src/sticky.scss
+++ b/packages/components/bolt-sticky/src/sticky.scss
@@ -13,5 +13,5 @@ bolt-sticky {
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: z('navFixed');
+  z-index: bolt-z-index('navFixed');
 }
